fix: adjust text alignments

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -75,28 +75,44 @@
 @media screen and (min-width: 1000px){
     .slider {
         display: grid;
-        grid-template-columns: 1fr 1fr; 
+        grid-template-columns: 3fr 2fr; 
         height: 60%;
-        border: 1px solid red;
     }
     
     .slider__image {
-        position: relative;
         object-fit: cover;
         object-position: 0% 65%;
         height: 100%;
         overflow: hidden;
-        border: 1px solid pink;
     }
 
     .slider__button-container {
         position: absolute;
         bottom: 0;
+        left: 60%;
+        border: 1px solid red;
     }
 
     .slider__button {
-        height: 25px;
-        width: 25px;
+        padding: 2.2rem;
+        height: 2rem;
+    }
+
+    .slider__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0rem 7rem;
+        row-gap: 1.7rem;
+
+        h2 {
+            font-size: 3.5rem;
+        }
+
+        .plain-text {
+            font-size: 1.2rem;
+            line-height: 1.6rem;
+        }
     }
 
 }
